#9 Updated NSAttachmentEntity and NSAudience*

--- a/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
@@ -3,17 +3,16 @@ items:
 - uid: CRMScript.NetServer.NSAttachmentEntity
   commentId: T:CRMScript.NetServer.NSAttachmentEntity
   id: NSAttachmentEntity
-  so.intellisense: Void.NSAttachmentEntity
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSAttachmentEntity.#ctor
   - CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
   - CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
   - CRMScript.NetServer.NSAttachmentEntity.GetContentId()
   - CRMScript.NetServer.NSAttachmentEntity.GetContentType()
   - CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
   - CRMScript.NetServer.NSAttachmentEntity.GetName()
-  - CRMScript.NetServer.NSAttachmentEntity.#ctor
   - CRMScript.NetServer.NSAttachmentEntity.SetAttachmentId(Integer)
   - CRMScript.NetServer.NSAttachmentEntity.SetAttSize(Integer)
   - CRMScript.NetServer.NSAttachmentEntity.SetContentId(String)
@@ -26,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
-  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
-  id: 'GetAttachmentId()'
-  so.intellisense: NSAttachmentEntity.GetAttachmentId
-  langs:
-  - crmscript
-  name: 'GetAttachmentId()'
-  nameWithType: NSAttachmentEntity.GetAttachmentId()
-  fullName: CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
-  type: Method
-  summary: "\nThe primary key (auto-incremented)<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSAttachmentEntity thing;\nInteger attachmentId = thing.GetAttachmentId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAttachmentId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSAttachmentEntity thing;\nInteger attachmentId = thing.GetAttachmentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
-  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
-  id: 'GetAttSize()'
-  so.intellisense: NSAttachmentEntity.GetAttSize
-  langs:
-  - crmscript
-  name: 'GetAttSize()'
-  nameWithType: NSAttachmentEntity.GetAttSize()
-  fullName: CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
-  type: Method
-  summary: "\nThe size (in bytes) for the attachment.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSAttachmentEntity thing;\nInteger attSize = thing.GetAttSize();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAttSize()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSAttachmentEntity thing;\nInteger attSize = thing.GetAttSize();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAttachmentEntity.GetContentId()
-  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetContentId()
-  id: 'GetContentId()'
-  so.intellisense: NSAttachmentEntity.GetContentId
-  langs:
-  - crmscript
-  name: 'GetContentId()'
-  nameWithType: NSAttachmentEntity.GetContentId()
-  fullName: CRMScript.NetServer.NSAttachmentEntity.GetContentId()
-  type: Method
-  summary: "\nThe content_id of this attachment, used for inline images<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSAttachmentEntity thing;\nString contentId = thing.GetContentId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetContentId()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSAttachmentEntity thing;\nString contentId = thing.GetContentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAttachmentEntity.GetContentType()
-  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetContentType()
-  id: 'GetContentType()'
-  so.intellisense: NSAttachmentEntity.GetContentType
-  langs:
-  - crmscript
-  name: 'GetContentType()'
-  nameWithType: NSAttachmentEntity.GetContentType()
-  fullName: CRMScript.NetServer.NSAttachmentEntity.GetContentType()
-  type: Method
-  summary: "\nThe content type for the attachment (e.g. 'applaction/octet-stream' or 'application/vnd.openxmlformats-officedocument.wordprocessingml.document').<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSAttachmentEntity thing;\nString contentType = thing.GetContentType();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetContentType()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSAttachmentEntity thing;\nString contentType = thing.GetContentType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
-  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
-  id: 'GetInlineImage()'
-  so.intellisense: NSAttachmentEntity.GetInlineImage
-  langs:
-  - crmscript
-  name: 'GetInlineImage()'
-  nameWithType: NSAttachmentEntity.GetInlineImage()
-  fullName: CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
-  type: Method
-  summary: "\nTrue if this attachment is inlined in the html_body.<p></p>\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSAttachmentEntity thing;\nBool inlineImage = thing.GetInlineImage();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Bool GetInlineImage()
-    parameters:
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSAttachmentEntity thing;\nBool inlineImage = thing.GetInlineImage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAttachmentEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSAttachmentEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSAttachmentEntity.GetName()
-  fullName: CRMScript.NetServer.NSAttachmentEntity.GetName()
-  type: Method
-  summary: "\nThe filename for the attachment.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSAttachmentEntity thing;\nString name = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSAttachmentEntity thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAttachmentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSAttachmentEntity.#ctor
   id: '#ctor'
@@ -155,6 +40,126 @@ items:
   syntax: 
     content: NSAttachmentEntity
   example: 
+- uid: CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
+  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
+  id: 'GetAttachmentId()'
+  so.intellisense: NSAttachmentEntity.GetAttachmentId
+  langs:
+  - crmscript
+  name: 'GetAttachmentId()'
+  nameWithType: NSAttachmentEntity.GetAttachmentId()
+  fullName: CRMScript.NetServer.NSAttachmentEntity.GetAttachmentId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetAttachmentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key (auto-incremented)
+  example: 
+  - "\n<pre><code>NSAttachmentEntity thing;\nInteger attachmentId = thing.GetAttachmentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
+  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
+  id: 'GetAttSize()'
+  so.intellisense: NSAttachmentEntity.GetAttSize
+  langs:
+  - crmscript
+  name: 'GetAttSize()'
+  nameWithType: NSAttachmentEntity.GetAttSize()
+  fullName: CRMScript.NetServer.NSAttachmentEntity.GetAttSize()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetAttSize()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The size (in bytes) for the attachment.
+  example: 
+  - "\n<pre><code>NSAttachmentEntity thing;\nInteger attSize = thing.GetAttSize();</code></pre>\n"
+- uid: CRMScript.NetServer.NSAttachmentEntity.GetContentId()
+  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetContentId()
+  id: 'GetContentId()'
+  so.intellisense: NSAttachmentEntity.GetContentId
+  langs:
+  - crmscript
+  name: 'GetContentId()'
+  nameWithType: NSAttachmentEntity.GetContentId()
+  fullName: CRMScript.NetServer.NSAttachmentEntity.GetContentId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetContentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The content_id of this attachment, used for inline images
+  example: 
+  - "\n<pre><code>NSAttachmentEntity thing;\nString contentId = thing.GetContentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSAttachmentEntity.GetContentType()
+  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetContentType()
+  id: 'GetContentType()'
+  so.intellisense: NSAttachmentEntity.GetContentType
+  langs:
+  - crmscript
+  name: 'GetContentType()'
+  nameWithType: NSAttachmentEntity.GetContentType()
+  fullName: CRMScript.NetServer.NSAttachmentEntity.GetContentType()
+  type: Method
+  summary: ""
+  remarks: "\nTypes can for example be 'application/octet-stream' or 'application/vnd.openxmlformats-officedocument.wordprocessingml.document'\n"
+  syntax: 
+    content: String GetContentType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The content type for the attachment
+  example: 
+  - "\n<pre><code>NSAttachmentEntity thing;\nString contentType = thing.GetContentType();</code></pre>\n"
+- uid: CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
+  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
+  id: 'GetInlineImage()'
+  so.intellisense: NSAttachmentEntity.GetInlineImage
+  langs:
+  - crmscript
+  name: 'GetInlineImage()'
+  nameWithType: NSAttachmentEntity.GetInlineImage()
+  fullName: CRMScript.NetServer.NSAttachmentEntity.GetInlineImage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetInlineImage()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if this attachment is inlined in the html_body.
+  example: 
+  - "\n<pre><code>NSAttachmentEntity thing;\nBool inlineImage = thing.GetInlineImage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSAttachmentEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSAttachmentEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSAttachmentEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSAttachmentEntity.GetName()
+  fullName: CRMScript.NetServer.NSAttachmentEntity.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The filename for the attachment.
+  example: 
+  - "\n<pre><code>NSAttachmentEntity thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAttachmentEntity.SetAttachmentId(Integer)
   commentId: M:CRMScript.NetServer.NSAttachmentEntity.SetAttachmentId(Integer)
   id: 'SetAttachmentId(Integer)'
@@ -165,14 +170,16 @@ items:
   nameWithType: NSAttachmentEntity.SetAttachmentId(Integer)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetAttachmentId(Integer)
   type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAttachmentId(Integer attachmentId)
+    content: Void SetAttachmentId(Integer attachmentId)
     parameters:
     - id: attachmentId
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key (auto-incremented)
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAttachmentEntity thing;\nInteger attachmentId;\nthing.SetAttachmentId(attachmentId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAttachmentEntity.SetAttSize(Integer)
@@ -185,14 +192,16 @@ items:
   nameWithType: NSAttachmentEntity.SetAttSize(Integer)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetAttSize(Integer)
   type: Method
-  summary: "\nThe size (in bytes) for the attachment.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAttSize(Integer attSize)
+    content: Void SetAttSize(Integer attSize)
     parameters:
     - id: attSize
       type: CRMScript.Global.Integer
-      description: 
+      description: The size (in bytes) for the attachment.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAttachmentEntity thing;\nInteger attSize;\nthing.SetAttSize(attSize);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAttachmentEntity.SetContentId(String)
@@ -205,14 +214,16 @@ items:
   nameWithType: NSAttachmentEntity.SetContentId(String)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetContentId(String)
   type: Method
-  summary: "\nThe content_id of this attachment, used for inline images\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetContentId(String contentId)
+    content: Void SetContentId(String contentId)
     parameters:
     - id: contentId
       type: CRMScript.Global.String
-      description: 
+      description: The content_id of this attachment, used for inline images
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAttachmentEntity thing;\nString contentId;\nthing.SetContentId(contentId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAttachmentEntity.SetContentType(String)
@@ -225,14 +236,16 @@ items:
   nameWithType: NSAttachmentEntity.SetContentType(String)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetContentType(String)
   type: Method
-  summary: "\nThe content type for the attachment (e.g. 'applaction/octet-stream' or 'application/vnd.openxmlformats-officedocument.wordprocessingml.document').\n"
-  remarks: 
+  summary: ""
+  remarks: "\nTypes can for example be 'application/octet-stream' or 'application/vnd.openxmlformats-officedocument.wordprocessingml.document'.\n"
   syntax: 
-    content: SetContentType(String contentType)
+    content: Void SetContentType(String contentType)
     parameters:
     - id: contentType
       type: CRMScript.Global.String
-      description: 
+      description: The content type for the attachment
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAttachmentEntity thing;\nString contentType;\nthing.SetContentType(contentType);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAttachmentEntity.SetInlineImage(Bool)
@@ -245,14 +258,16 @@ items:
   nameWithType: NSAttachmentEntity.SetInlineImage(Bool)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetInlineImage(Bool)
   type: Method
-  summary: "\nTrue if this attachment is inlined in the html_body.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetInlineImage(Bool inlineImage)
+    content: Void SetInlineImage(Bool inlineImage)
     parameters:
     - id: inlineImage
       type: CRMScript.Global.Bool
-      description: 
+      description: True if this attachment is inlined in the html_body.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAttachmentEntity thing;\nBool inlineImage;\nthing.SetInlineImage(inlineImage);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAttachmentEntity.SetName(String)
@@ -265,14 +280,16 @@ items:
   nameWithType: NSAttachmentEntity.SetName(String)
   fullName: CRMScript.NetServer.NSAttachmentEntity.SetName(String)
   type: Method
-  summary: "\nThe filename for the attachment.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The filename for the attachment.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAttachmentEntity thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 references:
@@ -300,3 +317,9 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
